objects/CaseConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Early Object used for handling Case Logic and steering the VF Pages</description>
    <fields>
        <fullName>DevSandboxId__c</fullName>
        <externalId>true</externalId>
        <label>DevSandboxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lower_Fieldset__c</fullName>
        <label>Lower Fieldset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Fieldset__c</fullName>
        <label>Middle Fieldset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Fieldset__c</fullName>
        <label>Upper Fieldset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CaseConfig</label>
</CustomObject>